--- a/css/styles.css
+++ b/css/styles.css
@@ -82,8 +82,7 @@ a {
   color: #ffffff;
 }
 
-.hero-button,
-.button-link {
+.hero-button {
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
